[package]
name = "subnet-calculator"
description = "A CLI tool to simply and fastly calculate subnetwork."
version = "1.1.0"
authors = ["Léo Huteau <huteau890@gmail.com>"]
edition = "2018"
repository = "https://github.com/ZeProf10T/Subnet-calculator"
homepage = "https://github.com/ZeProf10T/Subnet-calculator"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["network","tool","cli"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="*", features = ["yaml"] }
csv = "*"